tests/cases/scc/error/0026-numargs2.c.res
./tests/cases/scc/error/0026-numargs2.c:12:11:	error:   too many arguments to function call.
exit code 1
